--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- Replace the src attribute with your actual animated gif URL -->
             <img src="https://c.tenor.com/Jol0FFfU7C4AAAAd/tenor.gif" alt="Cute Animated Gif 1">
         </div>
-        <h1>Bronwen &hearts;</h1>
+        <h1>Britany &hearts;</h1>
         <div class="buttons-container">
             <button id="yesButton" onclick="redirectYes()">Yes</button>
             <button id="noButton" onmouseover="moveNoButton()">No</button>
